--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.netcode.gameobjects": "1.5.2",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.services.lobby": "1.2.1",
+    "com.unity.shadergraph": "14.0.8",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
